<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">andrey_s_application2</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg">осенний
после смены</string>
<string name="lbl_1">1 неделя</string>
<string name="lbl_11_30">11:30</string>
<string name="lbl_22">22 оценки</string>
<string name="lbl4">Сегодня</string>
<string name="lbl5">Преподаватели</string>
<string name="lbl2">Лаб</string>
<string name="lbl_24_12_22">24.12.22</string>
<string name="lbl3">Мужик М. М.</string>
<string name="lbl_8_00">8:00</string>
<string name="lbl_201">201 к. Г</string>
<string name="lbl_4_67">4.67</string>
<string name="lbl_16_40">16:40</string>
<string name="msg4">Кафедра Информационные технологии и автоматизированные системы</string>
<string name="msg3">Мужиков Мужик Мужикович</string>
<string name="msg2">Очень длинное название предмета</string>
<string name="lbl_52">Комментарии (5)</string>
<string name="msg6">Информационные технологии и автоматизированные системы</string>
<string name="msg5">Мужиков 
Мужик Мужикович</string>
<string name="lbl_9_40">9:40</string>
<string name="lbl_13_20">13:20</string>
<string name="lbl_15_00">15:00</string>
<string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
<string name="lbl8">Мужиков М. М.</string>
<string name="lbl9">Темная тема</string>
<string name="lbl6">Меню</string>
<string name="lbl7">Доцент</string>
<string name="lbl10">Выйти</string>
<string name="lbl11">Преподаватель</string>
<string name="lbl">Расписание</string>
<string name="lbl12">Кафедра</string>
<string name="lbl_19_1">РИС-19-1б</string>
</resources>
