<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="menupageVM" type="com.andreysapplication.app.modules.menupage.data.viewmodel.MenupageVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearColumnstatusbar"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A701">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearMenuPage"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A701">
            <View android:background="@color/white_A700"
                android:id="@+id/viewStatusbar"
                android:layout_height="@dimen/_10pxv" android:layout_width="@dimen/_360pxh"/>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearTopAppBar"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_A700">
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btn191"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_40pxv"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="@dimen/_119pxh"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:paddingBottom="@dimen/_13pxv"
                    android:paddingEnd="@dimen/_24pxh"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_19_1"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_1" tools:text="@string/lbl_19_1"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtHeadline"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_24pxv"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{menupageVM.menupageModel.txtHeadline}"
                    style="@style/txtRobotoromanmedium24" tools:text="@string/lbl6"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearScroll"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_A700">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearAvatarName"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_21pxh"
                    android:layout_marginStart="@dimen/_21pxh"
                    android:layout_marginTop="@dimen/_20pxv"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal" style="@style/groupStylecornerRadius">
                    <View
                        android:background="@drawable/rectangle_bg_bluegray_100_radius_20"
                        android:id="@+id/viewEllipseOne"
                        android:layout_height="@dimen/_40pxh" android:layout_width="@dimen/_40pxh"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtText"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_9pxv"
                        android:layout_marginStart="@dimen/_8pxh"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_weight="0.77"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@{menupageVM.menupageModel.txtText}"
                        style="@style/txtRobotoromanmedium18" tools:text="@string/lbl8"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearActionRow"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8pxh"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="match_parent"
                    android:orientation="horizontal" style="@style/groupStylewhite_1">
                    <LinearLayout android:id="@+id/linearRowdarkmode"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_16pxv"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_weight="0.77"
                        android:layout_width="0dp" android:orientation="horizontal">
                        <ImageView android:id="@+id/imageDarkmode"
                            android:layout_height="@dimen/_17pxh"
                            android:layout_width="@dimen/_17pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_darkmode"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_darkmode"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtSubtitleOne"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_1pxv"
                            android:layout_marginStart="@dimen/_18pxh"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_weight="0.85"
                            android:layout_width="0dp"
                            android:letterSpacing="0.01"
                            android:lineSpacingExtra="@dimen/_1pxh"
                            android:singleLine="true"
                            android:text="@{menupageVM.menupageModel.txtSubtitleOne}"
                            style="@style/txtRobotoregular16" tools:text="@string/lbl9"/>
                    </LinearLayout>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchMaterialSwitch"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_14pxv"
                        android:layout_marginEnd="@dimen/_13pxh"
                        android:layout_marginStart="@dimen/_137pxh"
                        android:layout_marginTop="@dimen/_13pxv"
                        android:layout_weight="0.23" android:layout_width="0dp"/>
                </LinearLayout>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a700"
                    android:drawablePadding="@dimen/_18pxh"
                    android:drawableStart="@drawable/img_vector_red_a700"
                    android:ellipsize="end" android:hint="@string/lbl10"
                    android:id="@+id/etActionRow"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:layout_marginEnd="@dimen/_6pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_345pxv"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:paddingBottom="@dimen/_18pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_16pxv"
                    android:singleLine="true"
                    android:text="@={menupageVM.menupageModel.etActionRowValue}"
                    android:textColorHint="@color/red_A700"
                    style="@style/etSolid" tools:ignore="Autofill"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearHome"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_80pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegray_100">
                <View
                    android:background="@drawable/rectangle_bg_gray_908_radius_2"
                    android:id="@+id/lineHome"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_4pxv"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginEnd="@dimen/_144pxh"
                    android:layout_marginStart="@dimen/_144pxh"
                    android:layout_marginTop="@dimen/_8pxv" android:layout_width="@dimen/_72pxh"/>
            </LinearLayout>
        </LinearLayout>
        <FrameLayout android:id="@+id/frameBottombar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" style="@style/groupStylegray_100">
            <LinearLayout android:id="@+id/linearRowperson"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_16pxv"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:id="@+id/linearItem"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/imagePerson"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_16pxh"
                        android:layout_width="@dimen/_16pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_person"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_person"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtLabeltext"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_15pxv"
                        android:layout_width="match_parent"
                        android:letterSpacing="0.03"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@{menupageVM.menupageModel.txtLabeltext}"
                        style="@style/txtRobotomedium12_1" tools:text="@string/lbl5"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearItem1"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/imageVector"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_20pxh"
                        android:layout_width="@dimen/_16pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_vector"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_vector"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtLabeltextOne"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_width="match_parent"
                        android:letterSpacing="0.03"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@{menupageVM.menupageModel.txtLabeltextOne}"
                        style="@style/txtRobotomedium12_1" tools:text="@string/lbl"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearItem2"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <FrameLayout android:id="@+id/frameIcon"
                        android:layout_height="@dimen/_32pxv"
                        android:layout_width="@dimen/_64pxh" style="@style/groupStyleblue_2">
                        <ImageView android:id="@+id/imageVectorOne"
                            android:layout_gravity="center"
                            android:layout_height="@dimen/_13pxh"
                            android:layout_marginBottom="@dimen/_9pxv"
                            android:layout_marginTop="@dimen/_9pxv"
                            android:layout_width="@dimen/_18pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_vector_gray_911"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_vector_gray_911"/>
                    </FrameLayout>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtLabeltextTwo"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_5pxv"
                        android:layout_width="match_parent"
                        android:letterSpacing="0.03"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@{menupageVM.menupageModel.txtLabeltextTwo}"
                        style="@style/txtRobotomedium12_1" tools:text="@string/lbl6"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
